# mcp-chaos-monkey

./: .gitignore  README.md  mcp-chaos-monkey-plan.md
.github/workflows/: python-ci.yml  python-publish.yml
python/: README.md  pyproject.toml
python/src/mcp_chaos_monkey/: __init__.py  admin_endpoint.py  cli.py  controller.py  fault_types.py  guard.py  logger.py  scenarios.py
python/src/mcp_chaos_monkey/interceptors/: __init__.py  auth_interceptor.py  http_interceptor.py  redis_interceptor.py
python/tests/: conftest.py  test_admin_endpoint.py  test_auth_interceptor.py  test_cli.py  test_controller.py  test_fault_types.py  test_guard.py  test_http_interceptor.py  test_logger.py  test_redis_interceptor.py  test_scenarios.py
schema/: fault-config.schema.json  inject-request.schema.json  scenario.schema.json
typescript/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.lint.json  vitest.config.ts
typescript/src/: admin-endpoint.ts  cli.ts  controller.ts  fault-types.ts  guard.ts  index.ts  logger.ts  scenarios.ts
typescript/src/interceptors/: auth-interceptor.ts  http-interceptor.ts  redis-interceptor.ts
typescript/tests/: admin-endpoint.test.ts  auth-interceptor.test.ts  cli.test.ts  controller.test.ts  guard.test.ts  http-interceptor.test.ts  redis-interceptor.test.ts  scenarios.test.ts
