[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-chaos-monkey"
version = "0.1.0"
description = "Chaos/fault injection framework for MCP (Model Context Protocol) projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "chaos-engineering", "fault-injection", "testing", "resilience"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
