[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-chaos-monkey"
version = "0.1.0"
description = "Chaos/fault injection framework for MCP (Model Context Protocol) projects"
readme = "README.md"
license = "MIT"
authors = [{name = "Alexey Tyurin"}]
requires-python = ">=3.11"
keywords = ["mcp", "chaos-engineering", "fault-injection", "testing", "resilience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

# Zero runtime dependencies — core library uses only stdlib
dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.25.0"]
redis = ["redis>=5.0.0"]
starlette = ["starlette>=0.27.0"]
all = ["httpx>=0.25.0", "redis>=5.0.0", "starlette>=0.27.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "starlette>=0.27.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
mcp-chaos = "mcp_chaos_monkey.cli:main"

[project.urls]
Homepage = "https://github.com/alexey-tyurin/mcp-chaos-monkey"
Repository = "https://github.com/alexey-tyurin/mcp-chaos-monkey"
Issues = "https://github.com/alexey-tyurin/mcp-chaos-monkey/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_chaos_monkey"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
